--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -13,10 +13,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
+	<script type="text/javascript" src="js/typewriter.js"></script>
     <!-- external link   -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
@@ -33,6 +37,56 @@
             <img src="img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
+    <br>
+    <div style="width:100%; display:inline-table; float:left;">
+        <div style=" width:50%; display:inline-table; float:left;">
+            <h1 style="padding-top:25%; padding-left:10%; padding-right:10%;">
+                <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Kami HMTC KESMA.", "Kami Memfasilitasi Peminajaman dan Pengembalian Buku", "Apabila ada hal yang akan di tanyakan.", "Hubungi Kami." ]'>
+                    <span class="wrap"></span>
+                </a>
+            </h1><br><br>
+            <img src="img/yap.jpg" width="100%">
+        </div>
+        <div style=" width:50%; display:inline-table; float:left;" class="col-6 mobile-none">
+            <div style="height:45vh; background-color: rgba(251,98,62,1)">
+                <div class="row" style="padding:5%; padding-top:10%;">
+                        <div class="col-sm-5">
+                            <h1 class="h1-title color-white main-link underline" style="font-family: mp;">Borrow</h1>
+                            <h2>Pinjam buku</h2>
+                        </div>
+                        <div class="col-sm-5">
+                            <a href="">
+                                <div> 
+                                    <img src="img/icon-search.png" style="width: 30px; height: 30px; margin-top: 10px; margin-left: 7px; background-color:white; border-radius:50%; padding:1%;">
+                                </div>
+                            </a>
+                            <h2 >Kamu ingin baca buku apa?</h2>
+                        </div>
+                </div>
+            </div>
+            <div class="col-12 height-mobile" style="background-color:rgba(30,183,189,1);height:50vh">
+                <div id="wrapper-slice" style="padding-top:15%; padding-bottom:15%">
+                        <div class="col-6">
+                        <a href="https://www.bookabuku.com/book/lend">
+                            <h1 class="h1-title color-black main-link underline">Lend</h1></a>
+                            <h2 class="h2-supporting color-black">Pinjamkan bukumu</h2>
+                        
+                        </div>
+                        <div class="col-6">
+                        <a href="https://www.bookabuku.com/book/lend_register">
+                            <div class="button-main" style="margin-top: 15px"> 
+                            <img src="https://www.bookabuku.com/file/frontend/images/icon-lend.png" style="width: 30px; height: 30px; margin-top: 10px; margin-left: 7px">
+                            </div></a>
+                            
+                            <h2 class="h2-supporting color-black">Ingin pinjamkan bukumu?</h2>
+                        
+                        </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
