--- a/app/views/loggedout/cat.phtml
+++ b/app/views/loggedout/cat.phtml
@@ -12,7 +12,7 @@
     <!-- adding bootstrap theme css-->
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/stylekategori.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
 </head>
 <body>
 <div class="topnav" id="top-nav" style="z-index: 99;">
