--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -21,7 +21,8 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
+    <script type="text/javascript" src="js/efek.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/efek.css" />
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
     <div class="topnav" id="top-nav" style="z-index: 99;">
@@ -40,21 +41,26 @@
     <br>
     <div style="width:100%; display:inline-table; float:left;">
         <div style=" width:50%; display:inline-table; float:left;">
-            <h1 style="padding-top:25%; padding-left:10%; padding-right:10%;">
-                <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Kami HMTC KESMA.", "Kami Memfasilitasi Peminajaman dan Pengembalian Buku", "Apabila ada hal yang akan di tanyakan.", "Hubungi Kami." ]'>
+        <div style="height:250px;">
+            <h1 style="padding-top:25%; padding-left:8%; padding-right:8%;">
+                <a href="" style="font-family:mp;" class="typewrite" data-period="2000" data-type='[ "Hi, Kami HMTC KESMA.", "Kami Memfasilitasi Peminjaman dan Pengembalian Buku", "Apabila ada hal yang akan di tanyakan.", "Hubungi Kami." ]'>
                     <span class="wrap"></span>
                 </a>
-            </h1><br><br>
+            </h1><br>
+        </div>
+        <div>
             <img src="img/yap.jpg" width="100%">
         </div>
+
+        </div>
         <div style=" width:50%; display:inline-table; float:left;" class="col-6 mobile-none">
-            <div style="height:45vh; background-color: rgba(251,98,62,1)">
-                <div class="row" style="padding:5%; padding-top:10%;">
-                        <div class="col-sm-5">
-                            <h1 class="h1-title color-white main-link underline" style="font-family: mp;">Borrow</h1>
+            <div style="height:45vh; background-color: rgba(251,98,62,1); height:320px;">
+                <div class="row" style="padding:8%; padding-top:15%;">
+                        <div class="col-sm-6">
+                            <h1 class="h1-title color-white main-link underline" style="font-family: mp; text-decoration: line;">Borrow</h1>
                             <h2>Pinjam buku</h2>
                         </div>
-                        <div class="col-sm-5">
+                        <div class="col-sm-6">
                             <a href="">
                                 <div> 
                                     <img src="img/icon-search.png" style="width: 30px; height: 30px; margin-top: 10px; margin-left: 7px; background-color:white; border-radius:50%; padding:1%;">
@@ -64,68 +70,47 @@
                         </div>
                 </div>
             </div>
-            <div class="col-12 height-mobile" style="background-color:rgba(30,183,189,1);height:50vh">
-                <div id="wrapper-slice" style="padding-top:15%; padding-bottom:15%">
-                        <div class="col-6">
-                        <a href="https://www.bookabuku.com/book/lend">
-                            <h1 class="h1-title color-black main-link underline">Lend</h1></a>
-                            <h2 class="h2-supporting color-black">Pinjamkan bukumu</h2>
-                        
-                        </div>
-                        <div class="col-6">
-                        <a href="https://www.bookabuku.com/book/lend_register">
-                            <div class="button-main" style="margin-top: 15px"> 
-                            <img src="https://www.bookabuku.com/file/frontend/images/icon-lend.png" style="width: 30px; height: 30px; margin-top: 10px; margin-left: 7px">
-                            </div></a>
-                            
-                            <h2 class="h2-supporting color-black">Ingin pinjamkan bukumu?</h2>
-                        
-                        </div>
-                </div>
+            <div class="col-12 height-mobile" style="background-color:rgba(30,183,189,1);height:310px;">
+                <div class="row" style="padding:8%; padding-top:15%;">
+                            <div class="col-sm-6">
+                                <h1 class="h1-title color-white main-link underline" style="font-family: mp;">Lend</h1>
+                                <h2>Pinjamkan bukumu</h2>
+                            </div>
+                            <div class="col-sm-6">
+                                <a href="">
+                                    <div> 
+                                        <img src="img/icon-lend.png" style="width: 30px; height: 30px; margin-top: 10px; margin-left: 7px; background-color:white; border-radius:50%; padding:1%;">
+                                    </div>
+                                </a>
+                                <h2 >Ingin pinjamkan bukumu?</h2>
+                            </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <br><br>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="img/3.jpg" alt="New York" width="100%" height="">     
-      </div>
-
-      <div class="item">
-        <img src="img/1.jpg" alt="Chicago" width="100%" height="">    
-      </div>
-    
-      <div class="item">
-        <img src="img/2.jpg" alt="Los Angeles" width="100%" height="">    
-      </div>
     </div>
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
-<br><br>
-<div class="container" style="background-color: #BFDAD5; padding: 30px; border-radius:10%;">
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+<div  class="has-animation animation-rtl" class="container" style="background-color: #BFDAD5; padding: 30px; border-radius:10%;">
   <div class="row">
     <div class="col-sm-7" style="font-family:mp; font-size: 20px;">
-        <h2 style="font-size: 40px; background-color: lightblue; padding: 3%; border-radius:5%;"><b>BUKU?</b></h2>
+        <div>
+            <h2 style="font-size: 40px; background-color: lightblue; padding: 3%; border-radius:5%;"><b>BUKU?</b></h2>
+        </div>
+        <div>
         <p style="padding:3%; text-alig;n:justify">Buku yang kubaca selalu memberi sayap-sayap baru.
 Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan peristiwa, berbagi cerita cinta, menyapa semua tokoh yang ingin kujumpai, sambil bermain di lengkung pelangi.</p>
+        </div>   
     </div>
     <div class="col-sm-5">
         <img src="img/jpgpng/ambiz-introduction.jpg" style="width: 100%;">
@@ -133,7 +118,7 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
   </div>
 </div>
 <br><br>
-<div class="container" style="background-color: #F3E8C8;padding: 30px; border-radius:10%;">
+<div class="has-animation animation-ltr" class="container" style="background-color: #F3E8C8;padding: 30px; border-radius:10%;">
   <div class="row">
     <div class="col-sm-5">
         <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
