--- a/app/views/loggedin/time.phtml
+++ b/app/views/loggedin/time.phtml
@@ -4,7 +4,7 @@
     <title>SEMESTER 1</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>booKesma &middot; Pinjam-Sumbang Buku Akademik Informatika ITS</title>
+    <title>Koleksi-<?=$semester?> &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
 	<link rel="icon" type="icon/image" href="/bookesma.com/img/jpgpng/favicon.png">
