update form sumbang

--- a/app/views/loggedout/charity.phtml
+++ b/app/views/loggedout/charity.phtml
@@ -38,11 +38,58 @@
 		<div class="wrap-contact100">
 			<div class="contact100-form-title" style="background-image: url('img/bg-01.jpg');">
 				<span class="contact100-form-title-1">
+					FORM USER PENYUMBANG
+				</span>
+			</div>
+
+			<form class="contact100-form validate-form">
+
+							<div class="wrap-input100 validate-input" data-validate="NRP is required">
+					<span class="label-input100">NRP:</span>
+					<input class="input100" type="text" name="nrp" placeholder="Masukkan NRP">
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="wrap-input100 validate-input" data-validate="Name is required">
+					<span class="label-input100">Nama:</span>
+					<input class="input100" type="text" name="name" placeholder="Masukkan Nama">
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+					<span class="label-input100">Email:</span>
+					<input class="input100" type="text" name="email" placeholder="Masukkan Email">
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="wrap-input100 validate-input" data-validate="Phone is required">
+					<span class="label-input100">No HP:</span>
+					<input class="input100" type="text" name="phone" placeholder="Masukkan Nomer HP">
+					<span class="focus-input100"></span>
+				</div>
+				<div class="wrap-input100 validate-input" data-validate="Phone is required">
+					<span class="label-input100">Departemen:</span>
+					<input class="input100" type="text" name="departemen" placeholder="Masukkan Departemen">
+					<span class="focus-input100"></span>
+				</div>
+				<div class="wrap-input100 validate-input" data-validate="Phone is required">
+					<span class="label-input100">Universitas:</span>
+					<input class="input100" type="text" name="universitas" placeholder="Masukkan Universitas">
+					<span class="focus-input100"></span>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="container-contact100" >
+		<div class="wrap-contact100">
+			<div class="contact100-form-title" style="background-image: url('img/1.jpg');">
+				<span class="contact100-form-title-1">
 					FORM BUKU PENYUMBANG
 				</span>
 			</div>
 
 			<form class="contact100-form validate-form">
+
 				<div class="wrap-input100 validate-input" data-validate="Judul Buku is required">
 					<span class="label-input100">Judul Buku:</span>
 					<input class="input100" type="text" name="judul" placeholder="Masukkan Judul Buku">
