revisi routing semester/[1-8]

--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -138,17 +138,17 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
     <div class="col-sm-4">
         <img src="img/svg/semester1.svg" style="width: 100%;">
         <br><br>
-        <a style="margin-left:35%;" href="<?=$this->url->getBaseUri().'koleksi/semester1'?>" type="a" class="btn btn-primary btn-lg">Semester 1</a>
+        <a style="margin-left:35%;" href="<?=$this->url->getBaseUri().'koleksi/semester/1'?>" type="a" class="btn btn-primary btn-lg">Semester 1</a>
     </div>
     <div class="col-sm-4" style="">
     <img src="img/svg/semester2.svg" style="width: 100%;">
     <br><br>
-        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester2'?>" type="a" class="btn btn-primary btn-lg">Semester 2</a>
+        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester/2'?>" type="a" class="btn btn-primary btn-lg">Semester 2</a>
     </div>
     <div class="col-sm-4">
         <img src="img/svg/semester3.svg" style="width: 100%;">
         <br><br>
-        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester3'?>" type="a" class="btn btn-primary btn-lg">Semester 3</a>
+        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester/3'?>" type="a" class="btn btn-primary btn-lg">Semester 3</a>
     </div>
   </div>
 </div>
@@ -157,17 +157,17 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
     <div class="col-sm-4">
         <img src="img/svg/semester4.svg" style="width: 100%;">
         <br><br>
-        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester4'?>" type="a" class="btn btn-primary btn-lg">Semester 4</a>
+        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester/4'?>" type="a" class="btn btn-primary btn-lg">Semester 4</a>
     </div>
     <div class="col-sm-4" style="">
     <img src="img/svg/semester5.svg" style="width: 100%;">
     <br><br>
-        <a style="margin-left:35%;" href="<?=$this->url->getBaseUri().'koleksi/semester5'?>" type="a" class="btn btn-primary btn-lg">Semester 5</a>
+        <a style="margin-left:35%;" href="<?=$this->url->getBaseUri().'koleksi/semester/5'?>" type="a" class="btn btn-primary btn-lg">Semester 5</a>
     </div>
     <div class="col-sm-4">
         <img src="img/svg/semester6.svg" style="width: 100%;">
         <br><br>
-        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester6'?>" type="a" class="btn btn-primary btn-lg">Semester 6</a>
+        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester/6'?>" type="a" class="btn btn-primary btn-lg">Semester 6</a>
     </div>
   </div>
  <div class="container-fluid" style="background-color: #F3E8C8;padding: 5%; padding-left:15%;border-radius:0% 0% 15% 15%;">
@@ -175,12 +175,12 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
     <div class="col-sm-6">
         <img src="img/svg/semester7.svg" style="width: 75%;">
         <br><br>
-        <a style="margin-left:25%;"  href="<?=$this->url->getBaseUri().'koleksi/semester7'?>" type="a" class="btn btn-primary btn-lg">Semester 7</a>
+        <a style="margin-left:25%;"  href="<?=$this->url->getBaseUri().'koleksi/semester/7'?>" type="a" class="btn btn-primary btn-lg">Semester 7</a>
     </div>
     <div class="col-sm-6" style="">
     <img src="img/svg/semester8.svg" style="width: 75%;">
     <br><br>
-        <a style="margin-left:25%;"  href="<?=$this->url->getBaseUri().'koleksi/semester8'?>" type="a" class="btn btn-primary btn-lg">Semester 8</a>
+        <a style="margin-left:25%;"  href="<?=$this->url->getBaseUri().'koleksi/semester/8'?>" type="a" class="btn btn-primary btn-lg">Semester 8</a>
     </div>
   </div>
 </div>
