--- a/app/views/loggedin/cat.phtml
+++ b/app/views/loggedin/cat.phtml
@@ -39,32 +39,32 @@
     <div class="col-sm-3" style="background-image: url('/bookesma.com/img/svg/bg_layer1.svg'); padding: 2%; border-radius:5%; margin:2%;" >
         <img src="/bookesma.com/img/svg/semester1.svg" style="width: 100%;">
         <br><br>
-        <a href="<?=$this->url->getBaseUri().'/user/koleksi/semester/1'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 1</a>
+        <a href="<?=$this->url->getBaseUri().'user/koleksi/semester/1'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 1</a>
     </div>
     <div class="col-sm-3" style="background-image: url('/bookesma.com/img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="/bookesma.com/img/svg/semester2.svg" style="width: 100%;">
         <br><br>
-        <a href="<?=$this->url->getBaseUri().'/user/koleksi/semester/2'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 2</a>
+        <a href="<?=$this->url->getBaseUri().'user/koleksi/semester/2'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 2</a>
     </div>
     <div class="col-sm-3" style="background-image:url('/bookesma.com/img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="/bookesma.com/img/svg/semester3.svg" style="width: 100%;">
         <br><br>
-        <a href="<?=$this->url->getBaseUri().'/user/koleksi/semester/3'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 3</a>
+        <a href="<?=$this->url->getBaseUri().'user/koleksi/semester/3'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 3</a>
     </div>
     <div class="col-sm-3" style="background-image:url('/bookesma.com/img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="/bookesma.com/img/svg/semester4.svg" style="width: 100%;">
         <br><br>
-        <a href="<?=$this->url->getBaseUri().'/user/koleksi/semester/4'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 4</a>
+        <a href="<?=$this->url->getBaseUri().'user/koleksi/semester/4'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 4</a>
     </div>
     <div class="col-sm-3" style="background-image:url('/bookesma.com/img/svg/bg_layer1.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="/bookesma.com/img/svg/semester5.svg" style="width: 100%;">
         <br><br>
-        <a href="<?=$this->url->getBaseUri().'/user/koleksi/semester/5'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 5</a>
+        <a href="<?=$this->url->getBaseUri().'user/koleksi/semester/5'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 5</a>
     </div>
     <div class="col-sm-3" style="background-image:url('/bookesma.com/img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="/bookesma.com/img/svg/semester6.svg" style="width: 100%;">
         <br><br>
-        <a href="<?=$this->url->getBaseUri().'/user/koleksi/semester/6'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 6</a>
+        <a href="<?=$this->url->getBaseUri().'user/koleksi/semester/6'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 6</a>
     </div>
   </div>
 </div>
@@ -73,12 +73,12 @@
     <div class="col-sm-3" style="background-image:url('/bookesma.com/img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="/bookesma.com/img/svg/semester7.svg" style="width: 100%;">
         <br><br>
-        <a href="<?=$this->url->getBaseUri().'/user/koleksi/semester/7'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 7</a>
+        <a href="<?=$this->url->getBaseUri().'user/koleksi/semester/7'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 7</a>
     </div>
     <div class="col-sm-3" style="background-image:url('/bookesma.com/img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="/bookesma.com/img/svg/semester8.svg" style="width: 100%;">
         <br><br>
-        <a href="<?=$this->url->getBaseUri().'/user/koleksi/semester/8'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 8</a>
+        <a href="<?=$this->url->getBaseUri().'user/koleksi/semester/8'?>" style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 8</a>
     </div>
   </div>
 </div>
