--- a/app/views/loggedin/time.phtml
+++ b/app/views/loggedin/time.phtml
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SEMESTER 1</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Koleksi-<?=$semester?> &middot; booKesma</title>
+    <title>Semester-<?=$sem?> &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
 	<link rel="icon" type="icon/image" href="/bookesma.com/img/jpgpng/favicon.png">
@@ -42,7 +41,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container text-center">
     <h1>Koleksi Buku</h1>
-    <p>Koleksi buku semester 1</p>
+    <p>Koleksi Buku Semester-<?=$sem?></p>
   </div>
   <form style="margin-left:40%;" class="navbar-form navbar-left" action="/action_page.php">
       <div class="input-group">
