--- a/app/views/submit/destroy.phtml
+++ b/app/views/submit/destroy.phtml
@@ -21,7 +21,7 @@
             <img style="width:25vw; height:25vw;" src="img/svg/logo_icon.svg" alt="logout">
             <div class="title">
                 Terima kasih telah menggunakan layanan kami.
-                <a style="color: #0a0e29" href="<?=$this->url->getBaseUri()?>">\nMampir-mampir lagi ya!</a>
+                <a style="color: #000000" href="<?=$this->url->getBaseUri()?>"><br>Mampir-mampir lagi ya!</a>
             </div>
         </div>
     </div>
