--- a/app/views/loggedin/show.phtml
+++ b/app/views/loggedin/show.phtml
@@ -6,73 +6,112 @@
     <title>booKesma &middot; Pinjam-Sumbang Buku Akademik Informatika ITS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
-	<link rel="icon" type="icon/image" href="/bookesma.com/img/jpgpng/favicon.png">
+	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
     <!-- adding bootstrap css-->
     <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
     <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap-theme.css" />
     <!-- external page css -->
     <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/show.css" />
+	<script type="text/javascript" src="js/typewriter.js"></script>
     <!-- external link   -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/bookesma.com/js/efek.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/efek.css" />
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
-    <div class="topnav" id="top-nav" style="z-index: 99;">
+  <div class="topnav" id="top-nav" style="z-index: 99;">  
     <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="/bookesma.com/img/svg/logo.svg" alt="booKesma">
         </a>
-        <a href="<?=$this->url->getBaseuri().'logout'?>">Keluar</a>
-        <a href="<?=$this->url->getBaseuri().'user'?>">Riwayat</a>
-        <a href="<?=$this->url->getBaseUri().'user/profile'?>">Hai, <?=$this->session->get('auth')['s_name'] ?>!</a>
-        <a href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
-        <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
-        <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'logout'?>">Keluar</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'user'?>">Riwayat</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseUri().'user/profile'?>">Hai, <?=$this->session->get('auth')['s_name'] ?>!</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
             <img src="/bookesma.com/img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+    <br>
+    <div style="width:100%; display:inline-table; float:left;">
+        <div style=" width:50%; display:inline-table; float:left;">
+        <div style="height:250px;">
+            <h1 style="padding-top:25%; padding-left:8%; padding-right:8%;">
+                <a href="" style="font-family:mp;" class="typewrite" data-period="2000" data-type='[ "Hi, Kami HMTC KESMA.", "Kami Memfasilitasi Peminjaman dan Pengembalian Buku", "Apabila ada hal yang akan di tanyakan.", "Hubungi Kami." ]'>
+                    <span class="wrap"></span>
+                </a>
+            </h1><br>
+        </div>
+        <div>
+            <img src="img/yap.jpg" width="100%">
+        </div>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="img/3.jpg" alt="New York" width="100%" height="">     
-      </div>
-
-      <div class="item">
-        <img src="img/1.jpg" alt="Chicago" width="100%" height="">    
-      </div>
-    
-      <div class="item">
-        <img src="img/2.jpg" alt="Los Angeles" width="100%" height="">    
-      </div>
+        </div>
+        <div style=" width:50%; display:inline-table; float:left;" class="col-6 mobile-none">
+            <div style="height:45vh; background-color: rgba(251,98,62,1); height:320px;">
+                <div class="row" style="padding:8%; padding-top:15%;">
+                        <div class="col-sm-6">
+                            <h1 class="h1-title color-white main-link underline" style="font-family: mp; text-decoration: line;">Borrow</h1>
+                            <h2>Pinjam buku</h2>
+                        </div>
+                        <div class="col-sm-6">
+                            <a href="">
+                                <div> 
+                                    <img src="img/icon-search.png" style="width: 30px; height: 30px; margin-top: 10px; margin-left: 7px; background-color:white; border-radius:50%; padding:1%;">
+                                </div>
+                            </a>
+                            <h2 >Kamu ingin baca buku apa?</h2>
+                        </div>
+                </div>
+            </div>
+            <div class="col-12 height-mobile" style="background-color:rgba(30,183,189,1);height:310px;">
+                <div class="row" style="padding:8%; padding-top:15%;">
+                            <div class="col-sm-6">
+                                <h1 class="h1-title color-white main-link underline" style="font-family: mp;">Lend</h1>
+                                <h2>Pinjamkan bukumu</h2>
+                            </div>
+                            <div class="col-sm-6">
+                                <a href="">
+                                    <div> 
+                                        <img src="img/icon-lend.png" style="width: 30px; height: 30px; margin-top: 10px; margin-left: 7px; background-color:white; border-radius:50%; padding:1%;">
+                                    </div>
+                                </a>
+                                <h2 >Ingin pinjamkan bukumu?</h2>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
-<br><br>
-<div class="container" style="background-color: #BFDAD5; padding: 30px; border-radius:10%;">
+    </div>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+    <br><br><br>
+<div  class="has-animation animation-rtl" class="container" style="background-color: #BFDAD5; padding: 30px; border-radius:10%;">
   <div class="row">
     <div class="col-sm-7" style="font-family:mp; font-size: 20px;">
-        <h2 style="font-size: 40px; background-color: lightblue; padding: 3%; border-radius:5%;"><b>BUKU?</b></h2>
+        <div>
+            <h2 style="font-size: 40px; background-color: lightblue; padding: 3%; border-radius:5%;"><b>BUKU?</b></h2>
+        </div>
+        <div>
         <p style="padding:3%; text-alig;n:justify">Buku yang kubaca selalu memberi sayap-sayap baru.
 Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan peristiwa, berbagi cerita cinta, menyapa semua tokoh yang ingin kujumpai, sambil bermain di lengkung pelangi.</p>
+        </div>   
     </div>
     <div class="col-sm-5">
         <img src="img/jpgpng/ambiz-introduction.jpg" style="width: 100%;">
@@ -80,7 +119,7 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
   </div>
 </div>
 <br><br>
-<div class="container" style="background-color: #F3E8C8;padding: 30px; border-radius:10%;">
+<div class="has-animation animation-ltr" class="container" style="background-color: #F3E8C8;padding: 30px; border-radius:10%;">
   <div class="row">
     <div class="col-sm-5">
         <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
@@ -100,17 +139,17 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
     <div class="col-sm-4">
         <img src="img/svg/semester1.svg" style="width: 100%;">
         <br><br>
-        <a style="margin-left:35%;" href="<?=$this->url->getBaseUri().'koleksi/semester1'?>" type="a" class="btn btn-primary btn-lg">Semester 1</a>
+        <a style="margin-left:35%;" href="<?=$this->url->getBaseUri().'user/koleksi/semester/1'?>" type="a" class="btn btn-primary btn-lg">Semester 1</a>
     </div>
     <div class="col-sm-4" style="">
     <img src="img/svg/semester2.svg" style="width: 100%;">
     <br><br>
-        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester2'?>" type="a" class="btn btn-primary btn-lg">Semester 2</a>
+        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'user/koleksi/semester/2'?>" type="a" class="btn btn-primary btn-lg">Semester 2</a>
     </div>
     <div class="col-sm-4">
         <img src="img/svg/semester3.svg" style="width: 100%;">
         <br><br>
-        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester3'?>" type="a" class="btn btn-primary btn-lg">Semester 3</a>
+        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'user/koleksi/semester/3'?>" type="a" class="btn btn-primary btn-lg">Semester 3</a>
     </div>
   </div>
 </div>
@@ -119,17 +158,17 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
     <div class="col-sm-4">
         <img src="img/svg/semester4.svg" style="width: 100%;">
         <br><br>
-        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester4'?>" type="a" class="btn btn-primary btn-lg">Semester 4</a>
+        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'user/koleksi/semester/4'?>" type="a" class="btn btn-primary btn-lg">Semester 4</a>
     </div>
     <div class="col-sm-4" style="">
     <img src="img/svg/semester5.svg" style="width: 100%;">
     <br><br>
-        <a style="margin-left:35%;" href="<?=$this->url->getBaseUri().'koleksi/semester5'?>" type="a" class="btn btn-primary btn-lg">Semester 5</a>
+        <a style="margin-left:35%;" href="<?=$this->url->getBaseUri().'user/koleksi/semester/5'?>" type="a" class="btn btn-primary btn-lg">Semester 5</a>
     </div>
     <div class="col-sm-4">
         <img src="img/svg/semester6.svg" style="width: 100%;">
         <br><br>
-        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'koleksi/semester6'?>" type="a" class="btn btn-primary btn-lg">Semester 6</a>
+        <a style="margin-left:35%;"  href="<?=$this->url->getBaseUri().'user/koleksi/semester/6'?>" type="a" class="btn btn-primary btn-lg">Semester 6</a>
     </div>
   </div>
  <div class="container-fluid" style="background-color: #F3E8C8;padding: 5%; padding-left:15%;border-radius:0% 0% 15% 15%;">
@@ -137,12 +176,12 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
     <div class="col-sm-6">
         <img src="img/svg/semester7.svg" style="width: 75%;">
         <br><br>
-        <a style="margin-left:25%;"  href="<?=$this->url->getBaseUri().'koleksi/semester7'?>" type="a" class="btn btn-primary btn-lg">Semester 7</a>
+        <a style="margin-left:25%;"  href="<?=$this->url->getBaseUri().'user/koleksi/semester/7'?>" type="a" class="btn btn-primary btn-lg">Semester 7</a>
     </div>
     <div class="col-sm-6" style="">
     <img src="img/svg/semester8.svg" style="width: 75%;">
     <br><br>
-        <a style="margin-left:25%;"  href="<?=$this->url->getBaseUri().'koleksi/semester8'?>" type="a" class="btn btn-primary btn-lg">Semester 8</a>
+        <a style="margin-left:25%;"  href="<?=$this->url->getBaseUri().'user/koleksi/semester/8'?>" type="a" class="btn btn-primary btn-lg">Semester 8</a>
     </div>
   </div>
 </div>
@@ -156,17 +195,17 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
     <div class="col-sm-4">
         <img src="img/svg/how_reservasi.svg" style="width: 75%; height:300px;">
         <br><br>
-        <a style="margin-left:25%;" href="<?=$this->url->getBaseUri().'bagaimana'?>" type="a" class="btn btn-primary btn-lg">Reservasi</a>
+        <a style="margin-left:25%;" href="<?=$this->url->getBaseUri().'user/bagaimana'?>" type="a" class="btn btn-primary btn-lg">Reservasi</a>
     </div>
     <div class="col-sm-4" style="">
     <img src="img/svg/how_sumbang.svg" style="width: 75%; height:300px;">
     <br><br>
-        <a style="margin-left:15%;" href="<?=$this->url->getBaseUri().'bagaimana'?>" type="a" class="btn btn-primary btn-lg">Penyumbangan</a>
+        <a style="margin-left:15%;" href="<?=$this->url->getBaseUri().'user/bagaimana'?>" type="a" class="btn btn-primary btn-lg">Penyumbangan</a>
     </div>
     <div class="col-sm-4" style="">
     <img src="img/svg/how_kembali.svg" style="width: 75%; height:300px;">
     <br><br>
-        <a style="margin-left:15%;" href="<?=$this->url->getBaseUri().'bagaimana'?>" type="a" class="btn btn-primary btn-lg">Pengembalian</a>
+        <a style="margin-left:15%;" href="<?=$this->url->getBaseUri().'user/bagaimana'?>" type="a" class="btn btn-primary btn-lg">Pengembalian</a>
     </div>
   </div>
 </div>
