--- a/app/views/loggedin/time.phtml
+++ b/app/views/loggedin/time.phtml
@@ -96,14 +96,14 @@
             <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="modal-close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                      <h4 class="modal-title">Modal Header</h4>
                  </div>
                 <div class="modal-body">
                     <p>Some text in the modal.</p>
                 </div>
             <div class="modal-footer">
-                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -113,14 +113,14 @@
             <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="modal-close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                      <h4 class="modal-title">Modal Header</h4>
                  </div>
                 <div class="modal-body">
                     <p>Some text in the modal.</p>
                 </div>
             <div class="modal-footer">
-                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
         </div>
@@ -130,14 +130,14 @@
             <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="modal-close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                      <h4 class="modal-title">Modal Header</h4>
                  </div>
                 <div class="modal-body">
                     <p>Some text in the modal.</p>
                 </div>
             <div class="modal-footer">
-                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
         </div>
@@ -147,14 +147,14 @@
             <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="modal-close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                      <h4 class="modal-title">Modal Header</h4>
                  </div>
                 <div class="modal-body">
                     <p>Some text in the modal.</p>
                 </div>
             <div class="modal-footer">
-                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
         </div>
@@ -164,14 +164,14 @@
             <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="modal-close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                      <h4 class="modal-title">Modal Header</h4>
                  </div>
                 <div class="modal-body">
                     <p>Some text in the modal.</p>
                 </div>
             <div class="modal-footer">
-                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
         </div>
@@ -181,14 +181,14 @@
             <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="modal-close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                      <h4 class="modal-title">Modal Header</h4>
                  </div>
                 <div class="modal-body">
                     <p>Some text in the modal.</p>
                 </div>
             <div class="modal-footer">
-                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
         </div>
