--- a/app/views/loggedin/show.phtml
+++ b/app/views/loggedin/show.phtml
@@ -58,7 +58,7 @@
             <div style="height:45vh; background-color: rgba(251,98,62,1); height:320px;">
                 <div class="row" style="padding:8%; padding-top:15%;">
                         <div class="col-sm-6">
-                            <h1 class="h1-title color-white main-link underline" style="font-family: mp; text-decoration: line;">Borrow</h1>
+                        <a href="<?=$this->url->getBaseuri().'user/koleksi'?>"><h1 class="h1-title color-white main-link underline" style="font-family: mp; text-decoration: line;font-size:50px;">Borrow</h1></a>
                             <h2>Pinjam buku</h2>
                         </div>
                         <div class="col-sm-6">
@@ -74,7 +74,7 @@
             <div class="col-12 height-mobile" style="background-color:rgba(30,183,189,1);height:310px;">
                 <div class="row" style="padding:8%; padding-top:15%;">
                             <div class="col-sm-6">
-                                <h1 class="h1-title color-white main-link underline" style="font-family: mp;">Lend</h1>
+                            <a href="<?=$this->url->getBaseuri().'sumbang'?>" > <h1 class="h1-title color-white main-link underline" style="font-family: mp;text-decoration: line;font-size:50px; color: rgba(251,98,62,1)">Lend</h1></a>
                                 <h2>Pinjamkan bukumu</h2>
                             </div>
                             <div class="col-sm-6">
