--- a/app/views/loggedin/pesan.phtml
+++ b/app/views/loggedin/pesan.phtml
@@ -46,12 +46,12 @@
 
 				<div class="wrap-input100 validate-input" data-validate="NRP is required">
 					<span class="label-input100">Tanggal Kembali:</span>
-					<input class="input100" type="date" name="tgl_kembali" placeholder="Masukkan Tanggal Kembali">
+					<input class="input100" type="date" name="tanggal_bertemu" placeholder="Masukkan Tanggal Kembali">
 					<span class="focus-input100"></span>
                 </div>
                 <div class="wrap-input100 validate-input" data-validate="NRP is required">
 					<span class="label-input100">No HP:</span>
-					<input class="input100" type="text" name="nohp" placeholder="Masukkan NO HP">
+					<input class="input100" type="text" name="nomorhp" placeholder="Masukkan NO HP">
 					<span class="focus-input100"></span>
                 </div>
                 <div class="container-contact100-form-btn">
