update form sumbang

--- a/app/views/loggedout/charity.phtml
+++ b/app/views/loggedout/charity.phtml
@@ -36,9 +36,9 @@
 <br><br><br>
 	<div class="container-contact100" >
 		<div class="wrap-contact100">
-			<div class="contact100-form-title" style="background-image: url('img/bg-01.jpg');">
+			<div class="contact100-form-title" style="background-image: url('img/1.jpg');">
 				<span class="contact100-form-title-1">
-					FORM USER PENYUMBANG
+					FORM SUMBANG
 				</span>
 			</div>
 
@@ -77,18 +77,6 @@
 					<input class="input100" type="text" name="universitas" placeholder="Masukkan Universitas">
 					<span class="focus-input100"></span>
 				</div>
-			</form>
-		</div>
-	</div>
-	<div class="container-contact100" >
-		<div class="wrap-contact100">
-			<div class="contact100-form-title" style="background-image: url('img/1.jpg');">
-				<span class="contact100-form-title-1">
-					FORM BUKU PENYUMBANG
-				</span>
-			</div>
-
-			<form class="contact100-form validate-form">
 
 				<div class="wrap-input100 validate-input" data-validate="Judul Buku is required">
 					<span class="label-input100">Judul Buku:</span>
