--- a/app/views/loggedin/pesan.phtml
+++ b/app/views/loggedin/pesan.phtml
@@ -41,28 +41,26 @@
 					FORM RESERVASI
 				</span>
 			</div>
-
-			<form class="contact100-form validate-form">
+			<?=$this->tag->form(['reservasi','method'=>'post','class'=>'contact100-form validate-form','enctype'=>"multipart/form-data"]);?>
+			<!-- <form class="contact100-form validate-form"> -->
 
 				<div class="wrap-input100 validate-input" data-validate="NRP is required">
-					<span class="label-input100">Tanggal Kembali:</span>
-					<input class="input100" type="date" name="tanggal_bertemu" placeholder="Masukkan Tanggal Kembali">
+					<span class="label-input100">Tanggal Bertemu:</span>
+					<?php echo $form->render('tanggal_bertemu'); ?>
 					<span class="focus-input100"></span>
                 </div>
+
                 <div class="wrap-input100 validate-input" data-validate="NRP is required">
 					<span class="label-input100">No HP:</span>
-					<input class="input100" type="text" name="nomorhp" placeholder="Masukkan NO HP">
+					<?php echo $form->render('nomorhp'); ?>
 					<span class="focus-input100"></span>
                 </div>
+				
                 <div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
-						<span>
-							Submit
-							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
-						</span>
-					</button>
+				<?php echo $form->render('rsubmit'); ?>
 				</div>
-			</form>
+			<!-- </form> -->
+			<?= $this->tag->endForm()?>
 		</div>
 	</div>
 
