update halaman admin

--- a/app/views/loggedout/how.phtml
+++ b/app/views/loggedout/how.phtml
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
 	<link rel="stylesheet" type="text/css" media="screen" href="css/how.css" />
+  
+  <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 </head>
 <body style="background-image:url('img/svg/bg_layer2.svg'); font-family:mp;">
     <div class="topnav" id="top-nav">
