ubah <?=$this->url->getBaseUri()?>

--- a/app/views/loggedin/time.phtml
+++ b/app/views/loggedin/time.phtml
@@ -6,25 +6,25 @@
     <title>Semester-<?=$sem?> &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
-	<link rel="icon" type="icon/image" href="/bookesma.com/img/jpgpng/favicon.png">
+	<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
     <!-- adding bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/show.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/show.css" />
     
-	<link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/time.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/time.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="/bookesma.com/js/js.js"></script>
+	<script type="text/javascript" src="<?=$this->url->getBaseUri()?>/js/js.js"></script>
 </head>
 <body>
 <div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
-            <img src="/bookesma.com/img/svg/logo.svg" alt="booKesma">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
         <a style="text-decoration:none;" href="<?=$this->url->getBaseuri().'logout'?>">Keluar</a>
         <a style="text-decoration:none;" href="<?=$this->url->getBaseuri().'user'?>">Riwayat</a>
@@ -33,7 +33,7 @@
         <a style="text-decoration:none;" href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a style="text-decoration:none;" href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a style="text-decoration:none;" href="javascript:void(0);" class="icon" onclick="navbar()">
-            <img src="/bookesma.com/img/svg/hamburger-menu.svg" alt="menu">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
 </div>
 <br><br>
@@ -61,32 +61,32 @@
         <div class="row">
             <div class="col-sm-4">
                 <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal">
-                    <img src="/bookesma.com/img/p1.jpg">
+                    <img src="<?=$this->url->getBaseUri()?>/img/p1.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal2">
-                    <img src="/bookesma.com/img/p2.jpg">
+                    <img src="<?=$this->url->getBaseUri()?>/img/p2.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal3">
-                    <img src="/bookesma.com/img/p3.jpg">
+                    <img src="<?=$this->url->getBaseUri()?>/img/p3.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal4">
-                    <img src="/bookesma.com/img/p4.jpg">
+                    <img src="<?=$this->url->getBaseUri()?>/img/p4.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal5">
-                    <img src="/bookesma.com/img/p5.jpg">
+                    <img src="<?=$this->url->getBaseUri()?>/img/p5.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
                 <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal6">
-                    <img src="/bookesma.com/img/p6.jpg">
+                    <img src="<?=$this->url->getBaseUri()?>/img/p6.jpg">
                 </a>
             </div>
         </div>
