--- a/app/views/loggedin/edit.phtml
+++ b/app/views/loggedin/edit.phtml
@@ -6,19 +6,19 @@
     <title>Edit Data Anda &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
-	<link rel="icon" type="icon/image" href="/bookesma.com/img/jpgpng/favicon.png">
+	<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
     <!-- adding bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-	<link rel="stylesheet" type="text/css" href="/bookesma.com/css/show.css">
-	<link rel="stylesheet" type="text/css" href="/bookesma.com/css/daftar.css">
+	<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/css/show.css">
+	<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/css/daftar.css">
 </head>
 <body>
 	<div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
-            <img src="/bookesma.com/img/svg/logo.svg" alt="booKesma">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
 		</a>
 		<a href="<?=$this->url->getBaseuri().'logout'?>">Keluar</a>
         <a href="<?=$this->url->getBaseuri().'user'?>">Riwayat</a>
@@ -27,7 +27,7 @@
         <a href="<?=$this->url->getBaseuri().'user/bagaimana'?>">Bagaimana</a>
         <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
-            <img src="/bookesma.com/img/svg/hamburger-menu.svg" alt="menu">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
 	<div class="container">
@@ -66,9 +66,9 @@
 		</form>
 	</div>
 <!-- adding bootstrap -->
-<script src="/bookesma.com/js/bootstrap.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/bootstrap.js"></script>
 <!-- adding jquery -->
-<script src="/bookesma.com/js/jquery-3.3.1.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/jquery-3.3.1.js"></script>
 <!-- adding external script -->
 </body>
 </html>
