--- a/app/views/loggedin/how.phtml
+++ b/app/views/loggedin/how.phtml
@@ -6,18 +6,18 @@
     <title>Bagaimana? &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
-	  <link rel="icon" type="icon/image" href="/bookesma.com/img/jpgpng/favicon.png">
+	  <link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
     <!-- adding bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-	<link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/how.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/how.css" />
 </head>
-<body style="background-image:url('/bookesma.com/img/svg/bg_layer2.svg'); font-family:mp;">
+<body style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); font-family:mp;">
     <div class="topnav" id="top-nav">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
-            <img src="/bookesma.com/img/svg/logo.svg" alt="booKesma">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
         <a href="<?=$this->url->getBaseuri().'logout'?>">Keluar</a>
         <a href="<?=$this->url->getBaseuri().'user'?>">Riwayat</a>
@@ -26,7 +26,7 @@
         <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
-            <img src="/bookesma.com/img/svg/hamburger-menu.svg" alt="menu">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
 	</div>
 	<br><br><br><br>
@@ -50,7 +50,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color: lightblue;">
 		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
-		  <img src="/bookesma.com/img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" width="20%;" alt="booKesma">
 		  <hr>
           <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">RESERVASI</h1>
         </div>
@@ -84,7 +84,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color: lightblue;">
 		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
-		  <img src="/bookesma.com/img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" width="20%;" alt="booKesma">
 		  <hr>
           <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">PEMINJAMAN</h1>
         </div>
@@ -118,7 +118,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color: lightblue;">
 		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
-		  <img src="/bookesma.com/img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" width="20%;" alt="booKesma">
 		  <hr>
           <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">PENYUMBANGAN</h1>
         </div>
@@ -139,9 +139,9 @@
     </div>
     <div class="col-sm-8" style="padding-right:10%; text-align: center;">
     <h1 style="font-family: mp; font-size:30px;"><b>-OUR MEDIA SOCIAL-</b></h1>
-    <img src="/bookesma.com/img/jpgpng/icon-facebook.png" style="width: 5%;">
-    <img src="/bookesma.com/img/jpgpng/icon-mail.png" style="width: 5%;">
-    <img src="/bookesma.com/img/jpgpng/icon-twitter.png" style="width: 5%;">
+    <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-facebook.png" style="width: 5%;">
+    <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-mail.png" style="width: 5%;">
+    <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-twitter.png" style="width: 5%;">
     <br>
     <h3>Kategori Buku</h3>
     <h3>Bagaimana?</h3>
@@ -151,10 +151,10 @@
   </div>
 </div>
 <!-- adding jquery -->
-<script src="/bookesma.com/js/jquery-3.3.1.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/jquery-3.3.1.js"></script>
 <!-- adding bootstrap -->
-<script src="/bookesma.com/js/bootstrap.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/bootstrap.js"></script>
 <!-- adding external script -->
-<script src="/bookesma.com/js/show.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/show.js"></script>
 </body>
 </html>
