--- a/app/views/loggedin/show.phtml
+++ b/app/views/loggedin/show.phtml
@@ -8,11 +8,11 @@
     <!-- Icon -->
 	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
     <!-- adding bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/show.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/show.css" />
 	<script type="text/javascript" src="js/typewriter.js"></script>
     <!-- external link   -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -21,13 +21,13 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="/bookesma.com/js/efek.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/efek.css" />
+    <script type="text/javascript" src="<?=$this->url->getBaseUri()?>/js/efek.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/efek.css" />
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
   <div class="topnav" id="top-nav" style="z-index: 99;">  
     <a class="home" href="<?=$this->url->getBaseUri()?>">
-            <img src="/bookesma.com/img/svg/logo.svg" alt="booKesma">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
         <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'logout'?>">Keluar</a>
         <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'user'?>">Riwayat</a>
@@ -36,7 +36,7 @@
         <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
-            <img src="/bookesma.com/img/svg/hamburger-menu.svg" alt="menu">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
     <br>
