--- a/app/views/loggedin/profile.phtml
+++ b/app/views/loggedin/profile.phtml
@@ -52,10 +52,10 @@
         </div>
     </div>
 <!-- adding bootstrap -->
-<script src="js/bootstrap.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/bootstrap.js"></script>
 <!-- adding jquery -->
-<script src="js/jquery-3.3.1.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/jquery-3.3.1.js"></script>
 <!-- adding external script -->
-<script src="js/show.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/show.js"></script>
 </body>
 </html>
