--- a/app/views/submit/destroy.phtml
+++ b/app/views/submit/destroy.phtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Keluar &middot; booKesma</title>
     <!-- Icon -->
-	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
+	<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- adding bootstrap css-->
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <img style="width:25vw; height:25vw;" src="img/svg/logo_icon.svg" alt="logout">
+            <img style="width:25vw; height:25vw;" src="<?=$this->url->getBaseUri()?>/img/svg/logo_icon.svg" alt="logout">
             <div class="title">
                 Terima kasih telah menggunakan layanan kami.
                 <a style="color: #000000" href="<?=$this->url->getBaseUri()?>"><br>Mampir-mampir lagi ya!</a>
@@ -26,8 +26,8 @@
         </div>
     </div>
     <!-- adding jquery -->
-    <script src="js/jquery-3.3.1.js"></script>
+    <script src="<?=$this->url->getBaseUri()?>/js/jquery-3.3.1.js"></script>
     <!-- adding bootstrap -->
-    <script src="js/bootstrap.js"></script>
+    <script src="<?=$this->url->getBaseUri()?>/js/bootstrap.js"></script>
 </body>
 </html>
