--- a/app/views/loggedin/pesan.phtml
+++ b/app/views/loggedin/pesan.phtml
@@ -68,10 +68,10 @@
 
 	<div id="dropDownSelect1"></div>
 
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="<?=$this->url->getBaseUri()?>/vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="<?=$this->url->getBaseUri()?>/vendor/bootstrap/js/popper.js"></script>
+	<script src="<?=$this->url->getBaseUri()?>/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="<?=$this->url->getBaseUri()?>/js/main.js"></script>
 
 </body>
 </html>
