--- a/app/views/loggedout/cat.phtml
+++ b/app/views/loggedout/cat.phtml
@@ -6,18 +6,18 @@
     <title>Koleksi &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
-	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
+	<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
     <!-- adding bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/show.css" />
 </head>
 <body>
 <div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
-            <img src="img/svg/logo.svg" alt="booKesma">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
         <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
         <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
@@ -25,7 +25,7 @@
         <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
-            <img src="img/svg/hamburger-menu.svg" alt="menu">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
 </div>
     <br><br><br><br>
@@ -34,33 +34,33 @@
 </div>
 <div class="container-fluid" style="background-color: white;padding: 30px; margin-left:10%;">
   <div class="row">
-    <div class="col-sm-3" style="background-image: url('img/svg/bg_layer1.svg'); padding: 2%; border-radius:5%; margin:2%;" >
-        <img src="img/svg/semester1.svg" style="width: 100%;">
+    <div class="col-sm-3" style="background-image: url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer1.svg'); padding: 2%; border-radius:5%; margin:2%;" >
+        <img src="<?=$this->url->getBaseUri()?>/img/svg/semester1.svg" style="width: 100%;">
         <br><br>
         <a style="margin-left:30%;" href="<?=$this->url->getBaseUri().'koleksi/semester/1'?>" type="button" class="btn btn-info btn-md">Semester 1</a>
     </div>
-    <div class="col-sm-3" style="background-image: url('img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
-        <img src="img/svg/semester2.svg" style="width: 100%;">
+    <div class="col-sm-3" style="background-image: url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="<?=$this->url->getBaseUri()?>/img/svg/semester2.svg" style="width: 100%;">
         <br><br>
         <a style="margin-left:30%;" href="<?=$this->url->getBaseUri().'koleksi/semester/2'?>" type="button" class="btn btn-info btn-md">Semester 2</a>
     </div>
-    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
-        <img src="img/svg/semester3.svg" style="width: 100%;">
+    <div class="col-sm-3" style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="<?=$this->url->getBaseUri()?>/img/svg/semester3.svg" style="width: 100%;">
         <br><br>
         <a style="margin-left:30%;" href="<?=$this->url->getBaseUri().'koleksi/semester/3'?>" type="button" class="btn btn-info btn-md">Semester 3</a>
     </div>
-    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
-        <img src="img/svg/semester4.svg" style="width: 100%;">
+    <div class="col-sm-3" style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="<?=$this->url->getBaseUri()?>/img/svg/semester4.svg" style="width: 100%;">
         <br><br>
         <a style="margin-left:30%;" href="<?=$this->url->getBaseUri().'koleksi/semester/4'?>" type="button" class="btn btn-info btn-md">Semester 4</a>
     </div>
-    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer1.svg'); padding: 2%; border-radius:5%; margin:2%;">
-        <img src="img/svg/semester5.svg" style="width: 100%;">
+    <div class="col-sm-3" style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer1.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="<?=$this->url->getBaseUri()?>/img/svg/semester5.svg" style="width: 100%;">
         <br><br>
         <a style="margin-left:30%;" href="<?=$this->url->getBaseUri().'koleksi/semester/5'?>" type="button" class="btn btn-info btn-md">Semester 5</a>
     </div>
-    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
-        <img src="img/svg/semester6.svg" style="width: 100%;">
+    <div class="col-sm-3" style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="<?=$this->url->getBaseUri()?>/img/svg/semester6.svg" style="width: 100%;">
         <br><br>
         <a style="margin-left:30%;" href="<?=$this->url->getBaseUri().'koleksi/semester/6'?>" type="button" class="btn btn-info btn-md">Semester 6</a>
     </div>
@@ -68,13 +68,13 @@
 </div>
 <div class="container-fluid" style="background-color: white;padding: 30px; margin-left:10%;">
   <div class="row">
-    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
-        <img src="img/svg/semester7.svg" style="width: 100%;">
+    <div class="col-sm-3" style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="<?=$this->url->getBaseUri()?>/img/svg/semester7.svg" style="width: 100%;">
         <br><br>
         <a style="margin-left:30%;" href="<?=$this->url->getBaseUri().'koleksi/semester/7'?>" type="button" class="btn btn-info btn-md">Semester 7</a>
     </div>
-    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
-        <img src="img/svg/semester8.svg" style="width: 100%;">
+    <div class="col-sm-3" style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="<?=$this->url->getBaseUri()?>/img/svg/semester8.svg" style="width: 100%;">
         <br><br>
         <a style="margin-left:30%;" href="<?=$this->url->getBaseUri().'koleksi/semester/8'?>" type="button" class="btn btn-info btn-md">Semester 8</a>
     </div>
