--- a/app/views/loggedout/charity.phtml
+++ b/app/views/loggedout/charity.phtml
@@ -6,23 +6,23 @@
     <title>Sumbang &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
-	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="font/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="font/Linearicons-Free-v1.0.0/icon-font.min.css">
+	<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
+	<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/font/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/font/Linearicons-Free-v1.0.0/icon-font.min.css">
 	<!-- adding bootstrap css-->
-	<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/show.css" />
+	<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/css/util.css">
+	<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/css/main.css">
 </head>
-<body style="background-image:url('img/svg/bg_layer1.svg')">
+<body style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer1.svg')">
 	<div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
-            <img src="img/svg/logo.svg" alt="booKesma">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
         <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
         <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
@@ -30,13 +30,13 @@
         <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
-            <img src="img/svg/hamburger-menu.svg" alt="menu">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
 <br><br><br>
 	<div class="container-contact100" >
 		<div class="wrap-contact100">
-			<div class="contact100-form-title" style="background-image: url('img/1.jpg');">
+			<div class="contact100-form-title" style="background-image: url('<?=$this->url->getBaseUri()?>/img/1.jpg');">
 				<span class="contact100-form-title-1">
 					FORM SUMBANG
 				</span>
@@ -130,10 +130,10 @@
 
 	<div id="dropDownSelect1"></div>
 
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="<?=$this->url->getBaseUri()?>/vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="<?=$this->url->getBaseUri()?>/vendor/bootstrap/js/popper.js"></script>
+	<script src="<?=$this->url->getBaseUri()?>/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="<?=$this->url->getBaseUri()?>/js/main.js"></script>
 
 </body>
 </html>
