--- a/app/views/loggedout/how.phtml
+++ b/app/views/loggedout/how.phtml
@@ -6,20 +6,20 @@
     <title>Bagaimana? &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
-	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
+	<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
     <!-- adding bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-	<link rel="stylesheet" type="text/css" media="screen" href="css/how.css" />
-  
+	<link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/how.css" />
+
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 </head>
-<body style="background-image:url('img/svg/bg_layer2.svg'); font-family:mp;">
+<body style="background-image:url('<?=$this->url->getBaseUri()?>/img/svg/bg_layer2.svg'); font-family:mp;">
     <div class="topnav" id="top-nav">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
-            <img src="img/svg/logo.svg" alt="booKesma">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
         <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
         <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
@@ -27,7 +27,7 @@
         <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
-            <img src="img/svg/hamburger-menu.svg" alt="menu">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
 	</div>
 	<br><br><br><br>
@@ -51,7 +51,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color: lightblue;">
 		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
-		  <img src="img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" width="20%;" alt="booKesma">
 		  <hr>
           <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">RESERVASI</h1>
         </div>
@@ -85,7 +85,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color: lightblue;">
 		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
-		  <img src="img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" width="20%;" alt="booKesma">
 		  <hr>
           <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">PEMINJAMAN</h1>
         </div>
@@ -119,7 +119,7 @@
       <div class="modal-content">
         <div class="modal-header" style="background-color: lightblue;">
 		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
-		  <img src="img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" width="20%;" alt="booKesma">
 		  <hr>
           <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">PENYUMBANGAN</h1>
         </div>
@@ -140,9 +140,9 @@
     </div>
     <div class="col-sm-8" style="padding-right:10%; text-align: center;">
     <h1 style="font-family: mp; font-size:30px;"><b>-OUR MEDIA SOCIAL-</b></h1>
-    <img src="img/jpgpng/icon-facebook.png" style="width: 5%;">
-    <img src="img/jpgpng/icon-mail.png" style="width: 5%;">
-    <img src="img/jpgpng/icon-twitter.png" style="width: 5%;">
+    <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-facebook.png" style="width: 5%;">
+    <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-mail.png" style="width: 5%;">
+    <img src="<?=$this->url->getBaseUri()?>/img/jpgpng/icon-twitter.png" style="width: 5%;">
     <br>
     <h3>Kategori Buku</h3>
     <h3>Bagaimana?</h3>
@@ -152,10 +152,10 @@
   </div>
 </div>
 <!-- adding jquery -->
-<script src="js/jquery-3.3.1.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/jquery-3.3.1.js"></script>
 <!-- adding bootstrap -->
-<script src="js/bootstrap.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/bootstrap.js"></script>
 <!-- adding external script -->
-<script src="js/show.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/show.js"></script>
 </body>
 </html>
