--- a/app/views/submit/createl.phtml
+++ b/app/views/submit/createl.phtml
@@ -6,19 +6,19 @@
     <title>Masuk &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
-		<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
+		<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
     <!-- adding bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-		<link rel="stylesheet" type="text/css" href="css/show.css">
-  	<link rel="stylesheet" type="text/css" href="css/masuk.css">
+		<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/css/show.css">
+  	<link rel="stylesheet" type="text/css" href="<?=$this->url->getBaseUri()?>/css/masuk.css">
 </head>
 <body>
 <div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
-            <img src="img/svg/logo.svg" alt="booKesma">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/logo.svg" alt="booKesma">
         </a>
         <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
         <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
@@ -26,7 +26,7 @@
         <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
-            <img src="img/svg/hamburger-menu.svg" alt="menu">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
 	<div class="container">
@@ -50,9 +50,9 @@
 		</form>
 	</div>
 <!-- adding bootstrap -->
-<script src="js/bootstrap.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/bootstrap.js"></script>
 <!-- adding jquery -->
-<script src="js/jquery-3.3.1.js"></script>
+<script src="<?=$this->url->getBaseUri()?>/js/jquery-3.3.1.js"></script>
 <!-- adding external script -->
 </body>
 </html>
