update form buku admin

--- a/app/views/loggedin/book.phtml
+++ b/app/views/loggedin/book.phtml
@@ -33,7 +33,7 @@
 	</div>
 	<br><br><br><br>
     <div class="container" style="backgroung-color:white; border: 3px solid darkblue; border-radius:10%;">
-    <section id="contact">
+    <section id="contact" style="border-radius:10%;">
 			<div class="section-content">
 				<span class="content-header">Form Buku Admin</span>
 			</div>
