--- a/app/views/loggedin/profile.phtml
+++ b/app/views/loggedin/profile.phtml
@@ -48,7 +48,7 @@
         </div>
         <div class="container" style="padding-top:2%;padding-left:44%;">
             <a href="<?=$this->url->getBaseUri().'user/edit-profile'?>" class="btn btn-info btn-md">Edit</a>
-            <a href="<?=$this->url->getBaseUri().'user'?>" class="btn btn-default btn-md">Kembali</a>
+            <a href="<?=$this->url->getBaseUri().'home'?>" class="btn btn-default btn-md">Kembali</a>
         </div>
     </div>
 <!-- adding bootstrap -->
